# dz_web_13

./: .env
api/endpoints/: birthdays.py
api/middleware/: rate_limit.py
api/models/: contact.py  mail.py
first_part/api/endpoints/: auth.py  contacts.py  user.py
second_part/: pyproject.toml
second_part/quotes/: db.sqlite3  scirpt.py
second_part/quotes/quotes/: settings.py  urls.py
second_part/quotes/quotesapp/: forms.py  models.py  urls.py  views.py
second_part/quotes/quotesapp/migrations/: 0001_initial.py
second_part/quotes/quotesapp/templates/quotesapp/: author_detail.html  authors.html  base.html  create_author.html  create_quote.html  index.html  quotes.html  tag.html
second_part/quotes/users/: forms.py  urls.py  views.py
second_part/quotes/users/templates/users/: login.html  reset_password.html  signup.html
