[tool.poetry]
name = "dz10"
version = "0.1.0"
description = ""
authors = ["Bohdan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.2"
django = "^5.0.3"
psycopg2 = "^2.9.9"
pymongo = "^4.6.3"
django-cors-headers==3.7.0

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
